...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StepDetailsFragment"
    tools:ignore="InconsistentLayout">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/step_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:resize_mode="fixed_width" />

    <ImageView
...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_padding_normal"
        android:paddingEnd="@dimen/horizontal_padding_normal"
        android:paddingStart="@dimen/horizontal_padding_normal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
...
