...
    tools:context=".fragments.RecipeIngredientsFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredients_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/recipe_steps_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recipe_steps_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
